# html_parser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Folder.DotSettings  README.md  TOKENIZER_TASKS.md  complete_example_with_css_methods.cpp  run_coverage.ps1  version.hpp.in
.github/workflows/: release.yml
.trae/documents/: CSS Module Optimization & Testing Plan.md  Crawler-Oriented Optimization Plan.md  Element 类优化与完善计划.md  Refactor HTMLParser Interface.md  Refactor shared_ptr to unique_ptr.md  html-entity-support-plan.md  优化 Document 及查询链路的语义与性能（C++20）.md
.trae/rules/: tech-stack.md
benchmark/: CMakeLists.txt  benchmark_common.hpp  css_selector_bench.cpp  parser_bench.cpp  tokenizer_bench.cpp
coverage/: README.md  open_report.ps1  run_coverage.ps1
docs/: BENCHMARK_2026-04-08.md  CODE_REVIEW_2026-04-03.md  HPS HTML 解析库详细设计文档.md  REQUIREMENTS.md  TEST_BASELINES.md
examples/: 01_basic_parsing.cpp  02_dom_manipulation.cpp  03_css_selectors.cpp  04_advanced_features.cpp  CMakeLists.txt  basic.cpp  br_newline.cpp  complete.cpp  css_matcher.cpp  css_parser.cpp  css_selector.cpp  debug_not.cpp  debug_sibling.cpp  novel.cpp  query_css.cpp  tokenizer.cpp  tree_builder.cpp  xpath_ast.cpp  xpath_lexer.cpp  xpath_parser.cpp
examples/html/: base.html  complex.html  crxs.htm  fofa.html  novel.htm  novel1.htm  panlong.html  sewenxue.htm  shodan.html  tepis.htm
include/hps/: hps.hpp  hps_fwd.hpp  version.hpp
include/hps/core/: attribute.hpp  comment_node.hpp  document.hpp  element.hpp  node.hpp  text_node.hpp
include/hps/parsing/: html_parser.hpp  options.hpp  token.hpp  token_attribute.hpp  token_builder.hpp  tokenizer.hpp  tree_builder.hpp
include/hps/query/: element_query.hpp  query.hpp  query_engine.hpp
include/hps/query/css/: css_engine.hpp  css_lexer.hpp  css_matcher.hpp  css_parser.hpp  css_query.hpp  css_selector.hpp  css_utils.hpp
include/hps/query/xpath/: xpath_ast.hpp  xpath_evaluator.hpp  xpath_lexer.hpp  xpath_parser.hpp  xpath_query.hpp
include/hps/utils/: encoding.hpp  exception.hpp  noncopyable.hpp  string_pool.hpp  string_utils.hpp
src/: hps.cpp
src/core/: comment_node.cpp  document.cpp  element.cpp  node.cpp  text_node.cpp
src/parsing/: html_parser.cpp  token.cpp  tokenizer.cpp  tree_builder.cpp
src/query/: element_query.cpp  query.cpp  query_engine.cpp
src/query/css/: css_lexer.cpp  css_matcher.cpp  css_parser.cpp  css_selector.cpp
src/query/xpath/: xpath_ast.cpp  xpath_lexer.cpp  xpath_parser.cpp  xpath_query.cpp
src/utils/: encoding.cpp
tests/: CMakeLists.txt  hps_tests.cpp
tests/baselines/html5lib/tokenizer/: core.test  doctype.test
tests/core/: attribute_test.cpp  comment_node_test.cpp  document_resource_test.cpp  document_test.cpp  element_test.cpp  node_test.cpp  text_node_test.cpp
tests/hps/: hps_api_test.cpp
tests/parsing/: entity_test.cpp  html5lib_tokenizer_baseline_test.cpp  html5lib_tree_construction_baseline_test.cpp  html_parser_test.cpp  options_test.cpp  token_attribute_test.cpp  token_builder_test.cpp  token_test.cpp  tokenizer_states_test.cpp  tokenizer_test.cpp  tree_builder_test.cpp
tests/query/: advanced_pseudo_test.cpp  css_selector_test.cpp  element_query_advanced_test.cpp  element_query_test.cpp  nth_of_type_test.cpp  query_test.cpp
tests/query/css/: css_lexer_test.cpp  css_matcher_test.cpp  css_parser_test.cpp  css_selector_test.cpp  css_utils_test.cpp
tests/utils/: encoding_test.cpp  exception_test.cpp  string_pool_test.cpp  string_utils_test.cpp
